# Medical_Embodied

./: .gitignore  .gitmodules  HANDOFF.md  README.md  ROS1_PLAN.md
src/charge/: CMakeLists.txt  package.xml
src/charge/examples/: README.md
src/charge/launch/: charge_services.launch
src/charge/scripts/: charge_services.py  new_tag_move.py  tag_charge.py
src/dialog/: CMakeLists.txt  package.xml
src/dialog/examples/: README.md
src/dialog/launch/: llm_mock.launch
src/dialog/scripts/: llm_mock_client.py  llm_mock_server.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: CallNurse.action  LLMInteraction.action  Navigate.action
src/interfaces/msg/: ActionStatus.msg  Battery.msg  Fault.msg
src/interfaces/srv/: ChargeUntil.srv  DetectAnomaly.srv  FaceIdentify.srv  SetConfig.srv
src/loadconfig/: CMakeLists.txt  package.xml
src/loadconfig/config/: default.yaml
src/loadconfig/include/loadconfig/: mode_define.h
src/loadconfig/scripts/: loadconfig_server.py
src/monitor/: CMakeLists.txt  package.xml
src/monitor/battery/src/: battery_status_get.cpp
src/monitor/chassis/car_driver/include/: car_canalyst.h  controlcan.h  print_can_msg.h  printf_utils.h  wheel_motor_driver.h
src/monitor/chassis/car_driver/msg/: RealCMD.msg
src/monitor/chassis/car_driver/node/: car_hardware_node.cpp  motor_status_get.cpp
src/monitor/chassis/car_driver/src/: car_canalyst.cpp  joy_key_ref.txt  wheel_motor_driver.cpp
src/monitor/chassis/car_move/config/: car_config.yml
src/monitor/chassis/car_move/include/: car_control.h  printf_utils.h
src/monitor/chassis/car_move/launch/: go.launch
src/monitor/chassis/car_move/node/: control_main_node.cpp
src/monitor/chassis/car_move/scripts/: keyboard_joy.py
src/monitor/chassis/car_move/src/: car_control.cpp
src/monitor/examples/: README.md
src/monitor/face_database/: README.md
src/monitor/launch/: face_identify.launch  monitor_mock.launch  start_chassis.launch
src/monitor/scripts/: anomaly_detect_server.py  face_identify_server.py  monitor_mock_pub.py
src/nav/: package.xml
src/nav/launch/: navigate_mock.launch
src/nav_third_party/mppi_controller_ros/: CMakeLists.txt  LICENSE  README.md  critics.xml  mppic.xml  package.xml
src/nav_third_party/mppi_controller_ros/.github/workflows/: ci.yml
src/nav_third_party/mppi_controller_ros/cfg/: MPPIControllerRos.cfg
src/nav_third_party/mppi_controller_ros/include/mppi_controller_ros/: controller.hpp  critic_data.hpp  critic_function.hpp  critic_manager.hpp  motion_models.hpp  optimizer.hpp
src/nav_third_party/mppi_controller_ros/params/: mppi_controller_params.yaml
src/nav_third_party/mppi_controller_ros/src/: controller.cpp  critic_manager.cpp  noise_generator.cpp  optimizer.cpp  parameters_handler.cpp  path_handler.cpp  trajectory_visualizer.cpp
src/nav_third_party/mppi_controller_ros/src/critics/: constraint_critic.cpp  cost_critic.cpp  goal_angle_critic.cpp  goal_critic.cpp  obstacles_critic.cpp  path_align_critic.cpp  path_angle_critic.cpp  path_follow_critic.cpp  prefer_forward_critic.cpp  twirling_critic.cpp  velocity_deadband_critic.cpp
src/navigate/bridge/: CMakeLists.txt  package.xml
src/navigate/bridge/examples/: README.md
src/navigate/bridge/launch/: navigate_mock.launch  navigate_xj_bridge.launch
src/navigate/bridge/scripts/: navigate_mock_client.py
src/navigate/bridge/src/: navigate_xj_bridge_server.cpp
src/navigate/loc/: CMakeLists.txt  package.xml
src/navigate/loc/config/: dual_ekf.yaml
src/navigate/loc/launch/: hdl_localization.launch  loc.launch
src/navigate/loc/rviz/: loc.rviz
src/navigate/pnc/: CMakeLists.txt  package.xml
src/navigate/pnc/config/mppi/: costmap_params.yaml  move_base_flex_mppi.yaml  mppi_controller_ros copy.yaml  mppi_controller_ros.yaml  mppi_controller_ros_reference_annotated.yaml
src/navigate/pnc/config/mppi_mid360_2d/: costmap_params.yaml
src/navigate/pnc/config/normal/: costmap_params.yaml  teb_local_planner_params.yaml
src/navigate/pnc/config/teb_hdl/: costmap_params.yaml  move_base_flex_params.yaml  teb_local_planner_params.yaml
src/navigate/pnc/config/track/: teb_local_planner_params.yaml
src/navigate/pnc/include/xjrobot_pnc/: nav_to_goal.h  run_tasks.h  run_waypoint.h
src/navigate/pnc/launch/: mbf_teb.launch  move_expr.launch  mppi_simu.launch
src/navigate/pnc/launch/mid360_2d/: mppi_simu_2d.launch  (+2 more)
src/navigate/pnc/node/: mbf_bridge_node.cpp  nav_to_goal_node.cpp  run_tasks_node.cpp  run_waypoint_node.cpp
src/navigate/pnc/rviz/: rviz0202.rviz
src/navigate/pnc/scripts/: vel_plotter.py
src/navigate/pnc/src/: goal_reach_debug.cpp  localization_supervisor.cpp  nav_to_goal.cpp  run_tasks.cpp  run_waypoint.cpp
src/navigate/simu/: CMakeLists.txt  package.xml
src/navigate/simu/include/: fusion_data.h  msg_bridge.h  new_msg_bridge.h
src/navigate/simu/launch/: expr.launch  fusion_data.launch  simu.launch
src/navigate/simu/msg/: fusion_analysis.msg
src/navigate/simu/node/: fusion_data_node.cpp
src/navigate/simu/script/: plotter
src/navigate/simu/src/: fusion_data.cpp  square_movement.cpp
src/navigate/simu/worlds/: simple_env.world
src/navigate/task/: CMakeLists.txt  README_patrol_state_machine_ext.md  package.xml
src/navigate/task/config/: patrol_waypoints.csv
src/navigate/task/launch/: patrol_state_machine.launch  patrol_state_machine_ext.launch
src/navigate/task/src/: patrol_state_machine.cpp  patrol_state_machine_ext.cpp
src/navigate/task/srv/: PatrolAddWaypoint.srv  PatrolAddWaypoints.srv
src/navigation/: CMakeLists.txt  package.xml
src/navigation/examples/: README.md
src/navigation/launch/: navigate_mock.launch
src/navigation/scripts/: navigate_mock_server.py
src/nurse_call/: CMakeLists.txt  package.xml
src/nurse_call/examples/: README.md
src/nurse_call/launch/: call_nurse_mock.launch
src/nurse_call/scripts/: call_nurse_mock_client.py  call_nurse_mock_server.py
src/patrol/: CMakeLists.txt  package.xml
src/patrol/examples/: README.md
src/patrol/launch/: patrol_trigger.launch
src/patrol/scripts/: patrol_trigger_server.py
(+70 files in other folders)
