<?xml version="1.0"?>
<package format="2">
  <name>dialog</name>
  <version>0.0.0</version>
  <description>Mock LLM interaction action server/client.</description>
  <maintainer email="val@todo.todo">val</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>interfaces</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
</package>
