<?xml version="1.0"?>
<package format="2">
  <name>loadconfig</name>
  <version>0.0.0</version>
  <description>Configuration loader and parameter server for behavior tree.</description>

  <maintainer email="val@todo.todo">val</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>interfaces</depend>

  <export>
  </export>
</package>
