<?xml version="1.0"?>
<package format="2">
  <name>monitor</name>
  <version>0.0.0</version>
  <description>Mock fault/battery/call signal publishers.</description>
  <maintainer email="val@todo.todo">val</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>interfaces</depend>
  <depend>std_msgs</depend>
</package>
