<?xml version="1.0"?>
<package format="2">
  <name>xjrobot_bridge</name>
  <version>0.0.0</version>
  <description>Bridge package between behavior_tree and nav_task.</description>
  <maintainer email="val@todo.todo">val</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>interfaces</depend>
  <depend>xjrobot_task</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
</package>
