<?xml version="1.0"?>
<package format="2">
  <name>xjrobot_loc</name>
  <version>0.0.0</version>
  <description>The xjrobot_loc package</description>

  <maintainer email="wu@todo.todo">wu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roslaunch</depend>
  <depend>nodelet</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>map_server</depend>
  <depend>robot_localization</depend>
  <depend>hdl_localization</depend>
  <depend>hdl_global_localization</depend>

  <export>
  </export>
</package>
