<?xml version="1.0"?>
<package format="2">
  <name>xjrobot_task</name>
  <version>0.0.0</version>
  <description>Task helpers for xjrobot.</description>

  <maintainer email="wu@todo.todo">wu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mbf_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
</package>
